# lrcp

./: .gitignore  LICENSE  README.md  config.example.toml  diplom.docx  ecosystem.config.js  pyproject.toml
conf/: lrcp_api.example.service  lrcp_master.example.service  lrcp_slave.example.service
docs/: cli.rst  conf.py  index.rst  requirements.txt  setup.rst  structure.rst  summary.rst  work_scheme.rst
docs/_templates/: layout.html
lrcp/: __main__.py  argument_parser.py  config.py  const.py  grpc.py
lrcp/api/: app.py  auth.py  exceptions.py
lrcp/api/routes/: __init__.py  user.py
lrcp/api/schemas/: server.py  (+4 more)
lrcp/client/: cron.py  main.py  server.py
lrcp/db/: __init__.py  fields.py  init.py  server.py  statistic.py  user.py
lrcp/grpc_data/: base_pb2.py  base_pb2.pyi  client_pb2.py  client_pb2.pyi  client_pb2_grpc.py  client_pb2_grpc.pyi  server_pb2.py  server_pb2.pyi  server_pb2_grpc.py  server_pb2_grpc.pyi
lrcp/scripts/: create_user.py  database_user.py  deco.py  setup_client_server.py  setup_server.py
lrcp/server/: main.py  server.py  utils.py
lrcp/utils/: cpu_info.py  grpc_message_to_dict.py  lsb_release.py  meminfo.py  net_info.py  regex.py  uptime.py
scripts/: compile_protobuf.sh  gen_openapi.sh  grpc_init.template  install-client.sh  install-master.sh  install-python.sh  install.sh  nginx.conf.example  replace_imports.py
web/: .eslintrc.json  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  Application.tsx  ApplicationInfo.tsx  const.ts  decs.d.ts  eruda.ts  index.tsx  react-app-env.d.ts  types.ts  utils.ts
(+66 files in other folders)
